named logos alt

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,12 +37,12 @@ const siteDescription =
 		<div class="max-w-6xl mx-auto px-12 py-6 space-y-4">
 			<img
 			src="/assets/logo/dokumint.svg"
-			alt="Dokumint"
+			alt="Dokumint Logo"
 			class="h-8 dark:hidden"
 			/>
 			<img
 			src="/assets/logo/dokumint-dark.svg"
-			alt="Dokumint"
+			alt="Dokumint Logo"
 			class="h-8 hidden dark:block"
 			/>
 		</div>
